# circle-JEPA

./: .gitignore  BUILD_PLAN.md  CLAUDE.md  README.md  _compare_modes.py  phase2.md  pyproject.toml  scritmo_iport.py  sofar.md
configs/: default.yaml
notebooks/: phase5_results.py  real_skin_fibroblast_expanded_results.py  real_skin_fibroblast_results.py  separate_jepa_results.py
scripts/: eval_cellcycle_jepa.py  run_cellcycle_jepa.py  run_phase5_comparison.py  run_real_jepa_separate.py  run_real_skin_fibroblast.py  run_real_skin_fibroblast_expanded.py
src/circadian_jepa/: paths.py
src/circadian_jepa/data/: dataset.py  gene_lists.py  loader.py  synthetic.py  views.py
src/circadian_jepa/data/resources/: ccg_zhang_context.csv
src/circadian_jepa/eval/: circular.py  cosinor.py  inference.py  plots.py
src/circadian_jepa/model/: __init__.py  ema.py  encoder.py  jepa.py  predictor.py
src/circadian_jepa/training/: __init__.py  config.py  losses.py  run.py  trainer.py
tests/: test_data.py  test_eval.py  test_model.py  test_smoke.py  test_training.py
